--- a/docs/5g-on-helium/service-providers.mdx
+++ b/docs/5g-on-helium/service-providers.mdx
@@ -10,8 +10,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The wireless sector continues to see
 [increasing demand](https://www.opensignal.com/2022/10/20/how-mobile-network-experience-affects-churn-in-us-wireless-carriers)
-for higher bandwidth and lower latency while users question whether the major Carriers are worth the
-price. In addition, Carriers’ ability to keep up with demand will require denser networks with more
+for higher bandwidth and lower latency while users question whether the major carriers are worth the
+price. In addition, carriers’ ability to keep up with demand will require denser networks with more
 nodes, which only exacerbates site acquisition costs.
 
 The Helium 5G Network presents an alternative that decentralizes these overhead costs while
@@ -27,19 +27,19 @@ It established the MOBILE subDAO, which handles all MOBILE Rewards emissions, mi
 programmatic treasury operations.
 
 Nova Labs has emerged as the first Service Provider on the MOBILE subDAO. Its Helium Mobile service
-created the “People’s Carrier” category, an innovative mobile Carrier model that leverages
+created the “People’s carrier” category, an innovative mobile carrier model that leverages
 people-built coverage and crypto-economics to reduce costs and increase benefits for subscribers.
 
 ## Operating A Major Carrier
 
-Traditional Carriers present as companies that sell connectivity and phones when, in reality,
+Traditional carriers present as companies that sell connectivity and phones when, in reality,
 carriers must outsource work to dozens of independent third parties to deliver services to
 subscribers.
 
-This situation creates a tangle of intermediaries resulting in a lot of overhead for the Carrier to
+This situation creates a tangle of intermediaries resulting in a lot of overhead for the carrier to
 coordinate.
 
-For example, most Carriers do not build their own communications equipment or software. They also do
+For example, most carriers do not build their own communications equipment or software. They also do
 not own or operate cellular towers, do not directly employ personnel to maintain their
 infrastructure or data centers, and often opt to franchise retail locations and outsource call
 centers.
@@ -49,7 +49,7 @@ centers.
   src={useBaseUrl('img/5g-on-helium/carrier-structure.png')}
 />
 
-With so many operational aspects of the business outsourced, the competitive advantage of a Carrier
+With so many operational aspects of the business outsourced, the competitive advantage of a carrier
 reduces to two critical assets over which they have direct ownership: spectrum lease contracts and
 service contracts with subscribers. Everything else – all of the coordination of people and
 infrastructure described above – is dedicated to bridging these two assets.
@@ -69,7 +69,7 @@ and more pass onto the subscribers due to the inefficiencies of this value chain
 ## Redefining The Carrier Value Chain
 
 Blockchains are an innovative approach to delivering superior economics for Service Providers by
-eliminating coordination inefficiencies that plague Carriers.
+eliminating coordination inefficiencies that plague carriers.
 
 Blockchain technology is ideal for coordinating economic activities between independent actors at
 its core because it aligns incentives across all layers, unlike the historical model where each
@@ -98,12 +98,12 @@ In its first few months, the Helium 5G Network footprint has achieved what has t
 largest CBRS networks in the U.S. years to accomplish, deploying more than 7,000 Small Cell Radios
 in over 1,200 cities across the U.S.
 
-To achieve similar results, a Carrier must employ extensive resources to coordinate between small
+To achieve similar results, a carrier must employ extensive resources to coordinate between small
 cell vendors, tower operators, installers, and backhaul ISP providers.
 
 This model efficiently incentivizes people to provide useful coverage on the Helium 5G Network by
 offering Rewards, ultimately reducing overall coverage costs because the service is less dependent
-on a Carrier and its expensive infrastructure.
+on a carrier and its expensive infrastructure.
 
 Coverage Rewards are not necessarily unilaterally distributed;
 [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) also enables Service Providers
@@ -125,12 +125,12 @@ What happens with these Rewards is entirely in the hands of Service Providers. T
 to increase overall profit margins, allocate them to developing innovative new features, or pass
 them on to subscribers to incentivize them to continue using their service or acquire new
 subscribers. Regardless, Service Providers have more autonomy and growth potential than offered in
-the otherwise rigid economic model of the traditional Carrier.
+the otherwise rigid economic model of the traditional carrier.
 
 <img className="explorerSidebar img-center" src={useBaseUrl('img/5g-on-helium/reward-flow.png')} />
 
 As more subscribers use the people-built coverage of Helium 5G and earn Rewards, the overall value
-of the Network increases, more customers will subscribe to the Carrier, and the cycle will continue.
+of the Network increases, more customers will subscribe to the carrier, and the cycle will continue.
 
 ## Learning More And Next Steps
 
