front matter fixup

--- a/docs/5g-on-helium/service-providers.mdx
+++ b/docs/5g-on-helium/service-providers.mdx
@@ -1,12 +1,11 @@
 ---
 id: service-providers
+title: Service Providers on the Helium 5G Network
 sidebar_label: Service Providers
 slug: /5g-on-helium/service-providers
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
-
-# Service Providers on the Helium 5G Network
 
 The wireless sector continues to see
 [increasing demand](https://www.opensignal.com/2022/10/20/how-mobile-network-experience-affects-churn-in-us-wireless-carriers)
