--- a/docs/5g-on-helium/service-providers.mdx
+++ b/docs/5g-on-helium/service-providers.mdx
@@ -14,8 +14,8 @@ price. In addition, carriers’ ability to keep up with demand will require dens
 nodes, which only exacerbates site acquisition costs.
 
 The Helium 5G Network presents an alternative that decentralizes these overhead costs while
-providing more avenues for Service Providers to generate revenue – including allocations of MOBILE
-token emissions and through Helium 5G data accessed by their subscribers.
+providing more avenues for Service Providers to generate revenue including allocations of MOBILE
+token emissions.
 
 ## Background
 
