--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -67,14 +67,6 @@ The following features are supported in the Maker Starter App:
 - iOS App: https://apps.apple.com/us/app/aitek-app/id1615083798
 - Android App: https://play.google.com/store/apps/details?id=com.aitek.maker
 
-### Atom
-
-- Discord : https://discord.gg/sBQP69fcGd
-- Maker Apps: https://www.atomdesign.io/links
-- iOS App: https://apps.apple.com/us/app/proton-hotspot/id1616846283
-- Android App: https://play.google.com/store/apps/details?id=io.atomdesign.proton&gl=ZA&pli=1
-- Web Dashboard: https://www.atomdesign.io/proton/
-
 ### Bobcat
 
 - Discord : https://discord.gg/2Barf528uj
@@ -103,6 +95,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Maker Apps: https://support.cotxnetworks.com/
 - iOS App: https://apps.apple.com/app/cotx/id1605937419
 - Android App: https://play.google.com/store/apps/details?id=com.cotxnetworks
+- Web Dashboard: https://www.cotx-sg.io/login
 
 ### Dragino
 
@@ -114,6 +107,13 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 :::
 
+### Dusun
+
+- Discord : https://discord.gg/d5b2Y2rUsv
+- iOS App: https://apps.apple.com/gb/app/dusun-hotspot-app/id1614559106
+- Android App: https://play.google.com/store/apps/details?id=com.maker.dusunhotspotapp
+
+
 ### EDATEC / EDA-IoT
 
 - Discord : https://discord.gg/SKwEeSreJu
@@ -121,11 +121,6 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - iOS App: https://apps.apple.com/us/app/eda-iot-hotspot/id1629546243
 - Android App: https://play.google.com/store/apps/details?id=com.edaiot.makerapp
 
-### Dusun
-
-- Discord : https://discord.gg/d5b2Y2rUsv
-- iOS App: https://apps.apple.com/gb/app/dusun-hotspot-app/id1614559106
-- Android App: https://play.google.com/store/apps/details?id=com.maker.dusunhotspotapp
 
 ### Embit
 
@@ -139,6 +134,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ### Finestra (Mimiq)
 
+- Maker Apps: https://thefinestra.com/install/
 - iOS App: https://apps.apple.com/us/app/finestraminer-app/id1614250948
 - Android App: https://play.google.com/store/apps/details?id=com.mimiq.finestraminerapp
 - Web Dashboard: https://thefinestra.com/#cloud-dashboard-m |
@@ -149,17 +145,26 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - iOS App: https://apps.ios.com/us/app/freedomfi/id1608377889
 - Android App: https://play.google.com/store/apps/details?id=com.freedomfi.FreedomFiApp
 
+### Helium (Own brand)
+
+- Discord : https://discord.gg/helium
+- Maker Apps: https://docs.helium.com/wallets/app-wallet
+- iOS App: https://apps.apple.com/us/app/helium-hotspot/id1450463605
+- Android App: https://play.google.com/store/apps/details?id=com.helium.wallet
+
 ### Heltec
 
 - Discord : https://discord.gg/Pt85TrZfxZ
-- Maker Apps: https://heltec.org/maker-app/
+- Maker Apps: https://heltec.org/maker-app
+- iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876
+- Android App: Download from Maker-App page
 
 ### Hummingbird
 
 - Discord : https://discord.gg/wUk9nfFGZW
 - Maker Apps: https://www.xdt.com/app.html
 - iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261
-- Android App:
+- Android App: Download from Maker-App page
 
 ### Kerlink
 
@@ -180,6 +185,8 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/WZufQURR7m
 - Maker Apps: https://www.linxdot.com/the-linxdot-app-has-landed/
+- iOS App: https://apps.apple.com/lv/app/linxdot-hotspot/id1605551724
+- Android App: https://play.google.com/store/apps/details?id=com.linxdot.companionapp&hl=en_GB&gl=US
 
 ### LongAP
 
@@ -216,12 +223,16 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### MNTD. / RAK
 
 - Discord : https://discord.gg/j92Nu5nmP9
-- Maker Apps: https://support.getmntd.com/hc/en-us/articles/6641899793559-MNTD-Quickstart
+- Maker Apps: https://getmntd.com/#mntd.-app
+- iOS App: https://apps.apple.com/ch/app/mntd-helium-hotspot-manager/id1595569593
+- Android App: https://play.google.com/store/apps/details?id=com.getmntd.wallet
 
 ### Nebra
 
 - Unofficial Discord : https://discord.gg/xWPDTj5ufx
 - Maker Apps: https://support.nebra.com/support/solutions/articles/24000077562-nebra-helium-app
+- iOS App: https://apps.apple.com/gb/app/nebra-hotspot/id1617299471
+- Android App: https://play.google.com/store/apps/details?id=com.nebra.helium.maker
 
 ### omSquare
 
@@ -244,6 +255,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### Osprey Electronics
 
 - Discord : https://discord.gg/dyJf8DD
+- Android App: https://play.google.com/store/apps/details?id=com.osprey.electronics
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
 
@@ -281,6 +293,13 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - iOS App: https://apps.apple.com/cn/app/polyhex-miner/id6444090208
 - Android App: https://play.google.com/store/apps/details?id=com.polyhex.miner
 
+### Proton (Atom)
+- Discord : https://discord.gg/sBQP69fcGd
+- Maker Apps: https://www.atomdesign.io/links
+- iOS App: https://apps.apple.com/us/app/proton-hotspot/id1616846283
+- Android App: https://play.google.com/store/apps/details?id=io.atomdesign.proton&gl=ZA&pli=1
+- Web Dashboard: https://www.atomdesign.io/proton/
+
 ### Pycom
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
@@ -293,16 +312,18 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - iOS App: https://apps.apple.com/app/resiot-helium-hotspot/id6444005674
 - Android App: https://play.google.com/store/apps/details?id=com.resiot.heliumhotspot&hl=it
+- Web Dashboard: https://helium.resiot.io/#dashboard
 
 ### RisingHF
 
 - Discord : https://discord.gg/MkD2X2NSUd
+- Android App: https://play.google.com/store/apps/details?id=com.risinghf.hotspot
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::note This Maker has not yet submitted an iOS App for inclusion on this page.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
-::: https://play.google.com/store/apps/details?id=com.risinghf.hotspot
+::: 
 
 ### SenseCAP
 
@@ -310,12 +331,15 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Maker Apps: https://www.sensecapmx.com/docs/sesnecap-hotspot-app/download-app/
 - iOS App: https://apps.apple.com/us/app/sensecap-hotspot/id1600051150
 - Android App: https://play.google.com/store/apps/details?id=com.sensecapmx.hotspot
+- Web Dashboard: https://status.sensecapmx.cloud/
 
 ### SyncroB.it
 
 - Discord : https://discord.gg/45dhnE3bdd
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
+The company is in liquidation and unlikely to release one. Check discord for 
+support by other vendors.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
