--- a/docs/5g-on-helium/service-providers.mdx
+++ b/docs/5g-on-helium/service-providers.mdx
@@ -26,7 +26,7 @@ It established the MOBILE subDAO, which handles all MOBILE Rewards emissions, mi
 programmatic treasury operations.
 
 Nova Labs has emerged as the first Service Provider on the MOBILE subDAO. Its Helium Mobile service
-created the “People’s carrier” category, an innovative mobile carrier model that leverages
+is an innovative mobile carrier model that leverages
 people-built coverage and crypto-economics to reduce costs and increase benefits for subscribers.
 
 ## Operating A Major Carrier
