admonition formatting tweak

--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -113,14 +113,12 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - iOS App: https://apps.apple.com/gb/app/dusun-hotspot-app/id1614559106
 - Android App: https://play.google.com/store/apps/details?id=com.maker.dusunhotspotapp
 
-
 ### EDATEC / EDA-IoT
 
 - Discord : https://discord.gg/SKwEeSreJu
 - Maker Apps: https://www.eda-iot.com/Guides/Hotspot-App/#download-eda-iot-hotspot-app
 - iOS App: https://apps.apple.com/us/app/eda-iot-hotspot/id1629546243
 - Android App: https://play.google.com/store/apps/details?id=com.edaiot.makerapp
-
 
 ### Embit
 
@@ -294,6 +292,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Android App: https://play.google.com/store/apps/details?id=com.polyhex.miner
 
 ### Proton (Atom)
+
 - Discord : https://discord.gg/sBQP69fcGd
 - Maker Apps: https://www.atomdesign.io/links
 - iOS App: https://apps.apple.com/us/app/proton-hotspot/id1616846283
@@ -323,7 +322,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
-::: 
+:::
 
 ### SenseCAP
 
@@ -338,8 +337,9 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Discord : https://discord.gg/45dhnE3bdd
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
-The company is in liquidation and unlikely to release one. Check discord for 
-support by other vendors.
+
+The company is in liquidation and unlikely to release one. Check the Helium Discord for support by
+other vendors.
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
