Apply suggestions from code review
Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -26,7 +26,7 @@ future state of the infrastructure post-migration.
 
 ## Price Oracle
 
-On the Helium L1, the Price Oracle iss the only existing Oracle on the Helium Network. It is
+On the Helium L1, the Price Oracle is the only existing Oracle on the Helium Network. It is
 required on-chain as the price of HNT is needed to calculate HNT to burn when minting Data Credits
 (DC).
 
@@ -87,7 +87,7 @@ Helium Network, aggregating from the LNSs into a database of routes that will pr
 Packet Router. The Config Service will immediately update the Packet Routers whenever it receives an
 update.
 
-The Packet Verifier also uses the CONfig Service to fetch the list of OUIs, wallet addresses per
+The Packet Verifier also uses the Config Service to fetch the list of OUIs, wallet addresses per
 gateway, and wallet addresses per OUI.
 
 ### Packet Router Service
