--- a/docs/solana-migration/solana-migration.mdx
+++ b/docs/solana-migration/solana-migration.mdx
@@ -11,3 +11,11 @@ slug: /solana-migration
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Solana Migration
+
+<div class="container">
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--12 img-center">
+      <img className="docsheader" src={useBaseUrl('img/under-construction.gif')} />
+    </div>
+  </div>
+</div>
