staging stub documentation

--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -1,8 +1,8 @@
 ---
 id: migration-infrastructure
-title: Solana Migration Infrastructure Overview
-pagination_label: Solana Migration Infrastructure Overview
-sidebar_label: Migration Infrastructure
+title: Solana Infrastructure Migration
+pagination_label: Solana Infrastructure Migration
+sidebar_label: Infrastructure Migration
 description: Helium Solana Migration Documentation
 # Image:
 slug: /solana-migration/migration-infrastructure
@@ -10,7 +10,7 @@ slug: /solana-migration/migration-infrastructure
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-# Migration Infrastructure Overview
+# Infrastructure Migration Overview
 
 The migration of the Helium Network from its L1 to Solana brings several changes to the setup of the
 Network and its associated subDAOs infrastructure. Chief among these changes is moving a lot of data
