--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -205,3 +205,57 @@ more about these plans.
 
 ---
 
+## Rewards Oracles And Infrastructure
+
+There will initially be three Rewards Oracles, one for each subDAO (MOBILE and IOT) and one for HNT,
+which ingest the work of all of the above Oracles to determine the appropriate emissions for each
+subDAO.
+
+Epochs will increase from around 30 blocks (or about 30 minutes) to 24 hours, with rewards issued
+every 24 hours.
+
+### Lazy Distribution of Rewards
+
+With the migration to Solana, Rewards will now be "lazily distributed" to each Hotspot, meaning that
+instead of passively receiving tokens, Hotspot Owners will redeem them.
+
+When a Hotspot Owner makes a redemption request, the Rewards Oracle will compute the difference
+between the `lifetime` and `claimed` token Rewards to determine the amount of unclaimed tokens per
+Hotspot. It will then pre-sign a transaction which the Hotspot Owner will submit to the blockchain.
+It is only at this point that Rewards will be registered on-chain and associated with the owning
+Helium Wallet.
+
+### IOT Rewards Oracle
+
+The IOT Rewards Oracle combines the Verified PoC Receipts, the Verified IOT Data Transfer Receipts,
+and the veHNT backing the IOT Network and emits rewards to each Hotspot.
+
+As a reminder, the Data Transfer Verifier and the PoC Verifier already do much of the heavy lifting
+by including the shares each Hotspot should receive.
+
+### Mobile Rewards Oracle
+
+The MOBILE Rewards Oracle combines the Verified MOBILE Receipts, the Verified MOBILE Data Transfer
+Receipts, and the veHNT backing the MOBILE Network and emits rewards to each Hotspot.
+
+### HNT Rewards Oracle
+
+As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md), the HNT Rewards
+Oracle will issue HNT Reward emissions to each subDAOs treasury using each subDAOs Utility Score to
+determine which percentage of the total rewards each subDAO is due.
+
+The following comprise the subDAO Utility Score:
+
+- subDAO's DCs burned in USD
+- subDAO's active device count and device activation fee
+- veHNT backing each subDAO
+
+DC burned, active device count, and veHNT staked are submitted to the chain throw the proxy of
+[Switchboard](https://switchboard.xyz/) to facilitate this process and keep a record.
+
+
+Device count is a fluctuating number based on recent PoC activity and is not readily available
+on-chain; a dedicated Oracle will submit device count to the blockchain via Switchboard.
+
+<img src={useBaseUrl('img/solana-migration/subdao-hnt-exchange.png')} />
+
