fixup image class

--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -58,7 +58,7 @@ potential bad actors.
 An out-of-the-box Oracle solution means fewer developer requirements for the Helium core developers
 and ensures more reliable service.
 
-<img className="docsheader" src={useBaseUrl('img/solana-migration/price-oracle.png')} />
+<img src={useBaseUrl('img/solana-migration/price-oracle.png')} />
 
 ---
 
@@ -124,7 +124,7 @@ The Packet Verifier verifies the submitted packets. Its primary responsibilities
 - Based on data transfer, calculate Rewards and the amount of DC to debit from each wallet
   associated with an OUI.
 
-<img className="docsheader" src={useBaseUrl('img/solana-migration/packet-verifier-service.png')} />
+<img src={useBaseUrl('img/solana-migration/packet-verifier-service.png')} />
 
 ---
 
@@ -181,7 +181,7 @@ The PoC Verifier Oracle will verify all the data submitted by correlating witnes
 confirming the series of events, then submitting these processed rewardable and invalid receipts to
 a separate S3 bucket, including how many shares to give to each Hotspot.
 
-<img className="docsheader" src={useBaseUrl('img/solana-migration/poc-verifier-oracle.png')} />
+<img src={useBaseUrl('img/solana-migration/poc-verifier-oracle.png')} />
 
 ---
 
