subDNT to HNT conversion

--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -259,3 +259,14 @@ on-chain; a dedicated Oracle will submit device count to the blockchain via Swit
 
 <img src={useBaseUrl('img/solana-migration/subdao-hnt-exchange.png')} />
 
+### SubDAO to HNT Conversion
+
+Each subDAO is responsible for defining its Treasury Reserve DNT Market Making Curve.
+
+The curves for
+[IOT](https://github.com/helium/HIP/blob/main/0052-iot-dao.md#treasury-reserve-dnt-market-making-curve)
+and [MOBILE](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) can be found in their
+respective HIPs.
+
+This is a "one-way" transaction to convert your subDNT into HNT, as you can not burn HNT for subDNT.
+
