--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -270,3 +270,15 @@ respective HIPs.
 
 This is a "one-way" transaction to convert your subDNT into HNT, as you can not burn HNT for subDNT.
 
+## Other Notes
+
+- Initially, all of these Oracles will be run by the Helium Foundation, with the long-term goal that
+  community members will also run them.
+- The buckets with raw PoC and Data Transfer receipts will be available for verification/security
+  purposes.
+- During the transition to Solana, data transmission will be temporarily interrupted while Makers
+  roll out the new `gateway-rs` image, which will tell Hotspots to communicate with the packet
+  routers instead of LNS state channels.
+- To learn more about how staking and governance will change, refer to the documentation on
+  [Validators and Voting Power](/mine-hnt/validators/validators-and-voting-power).
+
