--- a/docs/solana-migration/migration-infrastructure.mdx
+++ b/docs/solana-migration/migration-infrastructure.mdx
@@ -73,11 +73,11 @@ On the Helium L1, being a LoRaWAN Network Server (LNS) on the Helium Network req
 router, [state channels](/blockchain/packet-purchasing/#state-channels), and the Helium chain, a
 significant hurdle for non-blockchain native LNS configurations.
 
-On the Solana L1, the LNS will have a much-reduced role. After purchasing their OUI and slabs, they
-must inform the Config Service of the routing for the devices under their network. The LNS can
-optionally curate an allow-list to, for example, not accept packets from disabled devices or
-tenants/devices with a depleted Data Credit (DC) balance. The LNS will directly transmit these
-routes and their allow-list to the Config Service.
+On the Solana L1, the LNS will have a much-reduced role. After purchasing their Organizationally
+Unique Identifier (OUI) and slabs, they must inform the Config Service of the routing for the
+devices under their network. The LNS can optionally curate an allow-list to, for example, not accept
+packets from disabled devices or tenants/devices with a depleted Data Credit (DC) balance. The LNS
+will directly transmit these routes and their allow-list to the Config Service.
 
 The updated and reduced role brings the responsibilities of a Helium LNS much more in line with a
 generic LNS while also easing the integrations of existing LNS systems, further helping the
@@ -188,8 +188,8 @@ a separate S3 bucket, including how many shares to give to each Hotspot.
 ## Mobile PoC Oracle
 
 As the MOBILE subDAO is still in its infancy, its
-[PoC model is relatively straightforward](https://docs.helium.com/5g-on-helium/mobile-poc) and based
-on the following factors:
+[PoC model is relatively straightforward](/5g-on-helium/mobile-poc) and based on the following
+factors:
 
 1. The Small Cell Radio Type.
 2. Heartbeats and Reliability of Service.
@@ -261,7 +261,8 @@ on-chain; a dedicated Oracle will submit device count to the blockchain via Swit
 
 ### SubDAO to HNT Conversion
 
-Each subDAO is responsible for defining its Treasury Reserve DNT Market Making Curve.
+Each subDAO is responsible for defining its Treasury Reserve Decentralized Network Token (DNT)
+Market Making Curve.
 
 The curves for
 [IOT](https://github.com/helium/HIP/blob/main/0052-iot-dao.md#treasury-reserve-dnt-market-making-curve)
@@ -281,4 +282,3 @@ This is a "one-way" transaction to convert your subDNT into HNT, as you can not 
   routers instead of LNS state channels.
 - To learn more about how staking and governance will change, refer to the documentation on
   [Validators and Voting Power](/mine-hnt/validators/validators-and-voting-power).
-
