--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -67,7 +67,7 @@ The following features are supported in the Maker Starter App:
 - iOS App: https://apps.apple.com/us/app/aitek-app/id1615083798
 - Android App: https://play.google.com/store/apps/details?id=com.aitek.maker
 
-### Bobcat
+### Bobcat 
 
 - Discord : https://discord.gg/2Barf528uj
 - iOS App: https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1595267515
@@ -79,7 +79,7 @@ The following features are supported in the Maker Starter App:
 - iOS App:
 - Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
-### Controllino
+### Controllino 
 
 - Discord : https://discord.gg/HCp6wBuhwF
 
@@ -154,30 +154,27 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/Pt85TrZfxZ
 - Maker Apps: https://heltec.org/maker-app
-- iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876
+- iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876 (Chengdu Huilite Automation)
 - Android App: Download from Maker-App page
 
 ### Hummingbird
 
 - Discord : https://discord.gg/wUk9nfFGZW
 - Maker Apps: https://www.xdt.com/app.html
-- iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261
+- iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261 (Dealuse Technology Inc)
 - Android App: Download from Maker-App page
 
 ### Kerlink
 
-- Discord : https://discord.gg/9sYADWvZPg
+- Discord : https://discord.gg/9sYADWvZPg (Miner support)
 - Maker Apps: https://wikikerlink.fr/helium/doku.php?id=wiki:helium:klkapp
 - iOS App: https://apps.apple.com/fr/app/kerlink-helium-hotspot/id1613698129
 - Android App: https://play.google.com/store/apps/details?id=com.kerlink.heliumhotspot&hl=fr&gl=US
 
 ### KS Technologies
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
+- Android App: https://kstechnologies.com/affinity/affinitySetup#mobile
+- iOS App: Not yet available
 
 ### Linxdot
 
@@ -218,7 +215,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 ::: https://play.google.com/store/apps/details?id=com.milesight.hotspot
 
-### MNTD. / RAK
+### MNTD / RAK Wireless
 
 - Discord : https://discord.gg/j92Nu5nmP9
 - Maker Apps: https://getmntd.com/#mntd.-app
@@ -250,10 +247,11 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 :::
 
-### Osprey Electronics
+### Osprey Electronics (Ingenioius Technology)
 
 - Discord : https://discord.gg/dyJf8DD
 - Android App: https://play.google.com/store/apps/details?id=com.osprey.electronics
+- iOS App: https://apps.apple.com/us/app/osprey-electronics-hotspot/id1616301064
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
 
@@ -273,13 +271,13 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/PGeJPDUs8d
 
-:::note This Maker has not yet submitted an App for inclusion on this page.
+:::note This Maker has not yet submitted an App for inclusion on this page. ETA Mid Jan
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 :::
 
-### Pisces
+### Pisces (GreenPalm)
 
 - Discord : https://discord.gg/cBwEUxHcn4
 - Maker Apps: https://docs.piscesminer.com/pisces-document/piscesiot-app/release-and-download
@@ -361,7 +359,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 :::
 
-### uGWAN Pro
+### uGWAN Pro (Amber Link)
 
 - iOS App: https://apps.apple.com/us/app/1645839473
 - Android App: https://play.google.com/store/apps/details?id=com.amberlink.ugapp
